--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -10,7 +10,7 @@
         </div>
     </div>
 </section>
-<section class="menu container mx-auto py-8">
+<section id="menu" class="menu container mx-auto py-8">
     <h1 class="text-xl font-bold mb-8">All Pizzas</h1>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 col-gap-12 row-gap-16">
         <% pizzas.forEach(function(pizza) { %>
@@ -30,6 +30,5 @@
             </div>
         </div>
         <% }) %>
-
     </div>
 </section>
