--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Realtime pizza app</title>
+    <title>Pizzania</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet"
@@ -19,7 +19,7 @@
         </div>
         <div>
             <ul class="flex items-center">
-                <li class="ml-6"><a href="/">Menu</a></li>
+                <li class="ml-6"><a href="/#menu">Menu</a></li>
                 <% if(user) { %>
                 <li class="ml-6">
                     <form id="logout" action="/logout" method="POST">
